--- a/styles.css
+++ b/styles.css
@@ -1,24 +1,27 @@
 * {
     box-sizing: border-box;
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
-    scroll-behavior: smooth;
 }
 
 body {
     background-color: #15161B;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #EAECE7;
+    margin: 20px;
 }
 
-ul {
+nav {
     list-style-type: none;
     position: absolute;
     right: 0;
+    
 }
 
 li {
     display: inline-block;
+    margin: 0 20px;
 }
 
 a {
@@ -26,7 +29,34 @@ a {
     text-decoration: none;
 }
 
-header {
+header { /* set header position: relative and nav position: absolute */
     display: flex;
+    flex-direction: row;
+    background-color: orangered;
+    min-height: 75px;
     align-items: center;
+    position: relative;
 }
+
+h2 {
+    margin: 0 20px;
+}
+
+#welcome-section {
+    margin: 20px 0;
+    background-color: gray;
+    min-height: 70vh;
+}
+
+#front-content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    min-height: 70vh;
+}
+
+h1 {
+    font-size: 40px;
+}
+
