--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,8 @@ body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: #EAECE7;
     margin: 20px;
+    margin: 0;
+    padding: 0;
 }
 
 nav {
@@ -22,6 +24,7 @@ nav {
 li {
     display: inline-block;
     margin: 0 20px;
+    font-size: larger;
 }
 
 a {
@@ -35,7 +38,8 @@ header { /* set header position: relative and nav position: absolute */
     background-color: orangered;
     min-height: 75px;
     align-items: center;
-    position: relative;
+    position: fixed;
+    width: 100%;
 }
 
 h2 {
@@ -43,9 +47,7 @@ h2 {
 }
 
 #welcome-section {
-    margin: 20px 0;
-    background-color: gray;
-    min-height: 70vh;
+    background-color: grey;
 }
 
 #front-content {
@@ -53,10 +55,31 @@ h2 {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    min-height: 70vh;
+    height: 100vh;
 }
 
 h1 {
     font-size: 40px;
+}
+
+#resume-button {
+    margin: 20px 0 0 0;
+    padding: 10px 20px;
+    border: 1px solid #15161B;
+    border-radius: 7px;
+    background-color: #EAECE7;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: #15161B;
+    transition-duration: 0.2s;
+    font-size: medium;
+    text-align: center;
+}
+
+#resume-button:hover {
+    cursor: pointer;
+    background-color: #15161B;
+    color: #EAECE7;
+    border: 1px solid #EAECE7;
+    transition-duration: 0.2s;
 }
 
