--- a/styles.css
+++ b/styles.css
@@ -110,11 +110,29 @@ h2 {
     border-radius: 50%;
 }
 
+#details h1{
+    text-align: center;
+}
+
 .section-title {
-    display: inline-block;
-    margin: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
 }
 
 #details-content {
-    margin: 0 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.pfp {
+    margin: 0 100px;
+    width: 700px;
+}
+
+.info-text {
+    margin: 0 100px 0 0;
+    line-height: 1.5;
 }
