--- a/styles.css
+++ b/styles.css
@@ -153,16 +153,40 @@ h2 {
     filter: invert(100%);
 }
 
-#tech-stack-icons {
+.tech-stack-icons {
     width: 100px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #e66465;
 }
 
-#tech-stack-icons p{
+.tech-stack-icons p{
     text-align: center;
     line-height: 2;
+}
+
+#icons-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 75px;
+    padding: 40px;
+}
+
+#projects {
+    background-color: #545976;
+}
+
+#cards {
+    margin: 0 100px;
+    padding: 40px 0;
+}
+
+.project-card {
+    background-color: #787fa9;
+    width: 300px;
+    height: 300px;
+    border-radius: 10%;
 }
