--- a/styles.css
+++ b/styles.css
@@ -205,9 +205,10 @@ h2 {
 }
 
 .card-content {
-    padding: 20px;
+    padding: 40px;
 }
 
 .card-content h4 {
     text-align: center;
+    font-size: 20px;
 }
