--- a/styles.css
+++ b/styles.css
@@ -212,3 +212,22 @@ h2 {
     text-align: center;
     font-size: 20px;
 }
+
+.card-content p {
+    text-align: center;
+    margin: 20px;
+    line-height: 1.15;
+}
+
+.card-icons {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px
+}
+
+.card-icons img {
+    width: 30px;
+    filter: invert(100%);
+}
