--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ h2 {
 }
 
 .card-content {
-    padding: 40px;
+    padding: 50px;
 }
 
 .card-content h4 {
@@ -224,10 +224,30 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    gap: 10px
+    gap: 10px;
+    margin-bottom: 20px;
 }
 
 .card-icons img {
     width: 30px;
     filter: invert(100%);
+}
+
+.project-link-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.project-link-button {
+    background-color: #4e536e;
+    padding: 10px 20px;
+    border-radius: 7px;
+    font-size: small;
+    transition-duration: 0.2s;
+}
+
+.project-link-button:hover {
+    background-color: #2a2c3a;
+    transition-duration: 0.2s;
 }
