--- a/styles.css
+++ b/styles.css
@@ -119,7 +119,7 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 40px;
+    padding: 40px 0 0 0;
 }
 
 #details-content {
@@ -284,4 +284,12 @@ h2 {
     align-items: center;
     justify-content: center;
     gap: 15px;
+}
+
+#footer-text {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+    font-weight: bold;
 }
