--- a/styles.css
+++ b/styles.css
@@ -126,16 +126,17 @@ h2 {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 40px;
 }
 
 .pfp {
-    margin: 0 100px;
-    width: 700px;
+    margin: 0 100px 0 0
 }
 
 .info-text {
-    margin: 0 100px 0 0;
     line-height: 1.5;
+    max-width: 500px;
+    min-width: 500px;
 }
 
 .tech-stack-icon-div {
