added media queries

--- a/styles.css
+++ b/styles.css
@@ -136,7 +136,7 @@ h2 {
 .info-text {
     line-height: 1.5;
     max-width: 500px;
-    min-width: 500px;
+    min-width: 200px;
 }
 
 .tech-stack-icon-div {
@@ -293,4 +293,58 @@ h2 {
     justify-content: center;
     padding: 20px;
     font-weight: bold;
+    text-align: center;
+}
+
+@media screen and (max-width: 950px){
+    #cards {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 780px){
+    #contact-content {
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    .contact-container {
+        flex-direction: column;
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 700px) {
+    #details-content {
+        flex-direction: column;
+    }
+
+    .pfp {
+        margin: 0 0 40px 0;
+    }
+
+    .info-text {
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 620px) {
+    h2 {
+        display: none;
+    }
+
+    #navbar {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+    }
+
+    li a {
+        font-size: medium;
+    }
+
+    li {
+        padding: 10px;
+    }
 }
