--- a/styles.css
+++ b/styles.css
@@ -43,6 +43,7 @@ header { /* set header position: relative and nav position: absolute */
     display: flex;
     flex-direction: row;
     background-color: rgba(255, 255, 255, 0.056);
+    -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
     min-height: 75px;
     align-items: center;
